compiler/testData/diagnostics/tests/annotations/AnnotationsForClasses.kt
// RUN_PIPELINE_TILL: BACKEND
// FIR_IDENTICAL
annotation <!DEPRECATED_JAVA_ANNOTATION!>@java.lang.Deprecated<!> class my
